--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages. Yeet.</p>
+<h1>Hello there</h1>
+<p>I'm hosted with GitHub Pages. Yeet. We shall see how this goes</p>
 </body>
 </html>
