--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta property="og:locale" content="en_AU"/>
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Panquet"/>
-<meta name="twitter:description" content="Coming Soon?"/>
+<meta name="twitter:description" content="Coming Soon??"/>
 <meta name="twitter:image" content="https://img1.wsimg.com/isteam/stock/113040"/>
 <meta name="twitter:image:alt" content="Panquet"/>
 <meta name="theme-color" content="#6F6F6F"/><style data-inline-fonts>/* cyrillic */
