--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <p class="p1"><span class="s1"></span><br></p>
 <p class="p2"><span class="s2"><a href="file:///">PANQUET<span class="s1"></span></a></span></p>
 <p class="p1"><span class="s1"></span><br></p>
-<p class="p3"><span class="s2">Coming Soon??</span></p>
+<p class="p3"><span class="s2">Coming Soon???</span></p>
 <p class="p1"><span class="s1"></span><br></p>
 <h2 style="margin: 0.0px 0.0px 32.0px 0.0px; text-align: center; font: 38.0px 'Helvetica Neue'; color: #f5f5f5; -webkit-text-stroke: #f5f5f5"><span class="s2">Subscribe</span></h2>
 <p class="p5"><span class="s2">Sign up to be the first to get updates.</span></p>
