--- a/index.html
+++ b/index.html
@@ -31,102 +31,102 @@
 					<section id="thumbnails">
 						<article>
 							<a class="thumbnail" href="images/fulls/img1.jpg" data-position="center"><img src="images/thumbs/img1.jpg" alt="" /></a>
-							<h2>2/3/24</h2>
+							<h2>2-3-24</h2>
 							<p>Brothers</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/img6.jpg"><img src="images/thumbs/img6.jpg" alt="" /></a>
-							<h2>28/5/23</h2>
+							<h2>28-5-23</h2>
 							<p>Sunflower fields</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/img19.jpg"><img src="images/thumbs/img19.jpg" alt="" /></a>
-							<h2>24/7/23</h2>
+							<h2>24-7-23</h2>
 							<p>Metridium fields</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/img21.jpg"><img src="images/thumbs/img21.jpg" alt="" /></a>
-							<h2>4/6/23</h2>
+							<h2>4-6-23</h2>
 							<p>Tilly</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/img2.jpg" data-position="center"><img src="images/thumbs/img2.jpg" alt="" /></a>
-							<h2>27/11/19</h2>
+							<h2>27-11-19</h2>
 							<p>Roxy</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/img3.jpg" data-position="top center"><img src="images/thumbs/img3.jpg" alt="" /></a>
-							<h2>4/10/2020</h2>
+							<h2>4-10-20</h2>
 							<p>Barrington river crossing near old farm</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/img23.jpg" ><img src="images/thumbs/img23.jpg" alt="" /></a>
-							<h2>24/9/22</h2>
+							<h2>24-9-22</h2>
 							<p>Cheeky snake</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/img5.jpg" data-position="right"><img src="images/thumbs/img5.jpg" alt="" /></a>
-							<h2>7/2/20</h2>
+							<h2>7-2-20</h2>
 							<p>Monkeys</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/img22.jpg"><img src="images/thumbs/img22.jpg" alt="" /></a>
-							<h2>29/9/22</h2>
+							<h2>29-9-22</h2>
 							<p>He is under the impression he is majestic</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/img8.jpg"><img src="images/thumbs/img8.jpg" alt="" /></a>
-							<h2>23/7/23</h2>
+							<h2>23-7-23</h2>
 							<p>River running through the giant redwood forest</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/img16.jpg"><img src="images/thumbs/img16.jpg" alt="" /></a>
-							<h2>17/5/24</h2>
+							<h2>17-5-24</h2>
 							<p>Lakeside fishing with E&T</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/img9.jpg"><img src="images/thumbs/img9.jpg" alt="" /></a>
-							<h2>23/5/2020</h2>
+							<h2>23-5-20</h2>
 							<p>Would have long since been eaten</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/img13.jpg"><img src="images/thumbs/img13.jpg" alt="" /></a>
-							<h2>9/5/29</h2>
-							<p>T's first love</p>
+							<h2>9-5-29</h2>
+							<p>His first love</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/img12.jpg"><img src="images/thumbs/img12.jpg" alt="" /></a>
-							<h2>5/1/24</h2>
+							<h2>5-1-24</h2>
 							<p>Breaching</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/img10.jpg"><img src="images/thumbs/img10.jpg" alt="" /></a>
-							<h2>23/10/23</h2>
-							<p>Caught in the act: a couple zoo animals escaped from the enclosure</p>
+							<h2>23-10-23</h2>
+							<p>Caught in the act. A couple zoo animals escaped from the enclosure</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/img11.jpg"><img src="images/thumbs/img11.jpg" alt="" /></a>
-							<h2>3/1/24</h2>
-							<p>T's second love</p>
+							<h2>3-1-24</h2>
+							<p>His second love</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/img14.jpg" data-position="top center" ><img src="images/thumbs/img14.jpg" alt="" /></a>
-							<h2>9/12/23</h2>
+							<h2>9-12-23</h2>
 							<p>Tallest of the season</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/img15.jpg"><img src="images/thumbs/img15.jpg" alt="" /></a>
 							<h2>2-3-24</h2>
-							<p>yep.</p>
+							<p>yep</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/img17.jpg"><img src="images/thumbs/img17.jpg" alt="" /></a>
-							<h2>14/6/2024</h2>
+							<h2>14-6-24</h2>
 							<p>Penguins</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/img18.jpg"><img src="images/thumbs/img18.jpg" alt="" /></a>
-							<h2>2/3/24</h2>
+							<h2>2-3-24</h2>
 							<p>Family</p>
 						</article>
 					</section>
@@ -134,7 +134,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; Just a webpage to cover the family domain.</li>
+							<li> Just a webpage to cover the family domain.</li>
 						</ul>
 					</footer>
 
