--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Hello</h1>
-						<p>Just some pictures! </p>
+						<p>Just some pictures </p>
 						<ul class="icons">
 							<!-- commented out links i dont need
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
