--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 						<article>
 							<a class="thumbnail" href="images/fulls/img16.jpg"><img src="images/thumbs/img16.jpg" alt="" /></a>
 							<h2>17-5-24</h2>
-							<p>Lakeside fishing with E&T</p>
+							<p>Lakeside fishing with E and T</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/img9.jpg"><img src="images/thumbs/img9.jpg" alt="" /></a>
@@ -102,7 +102,7 @@
 						<article>
 							<a class="thumbnail" href="images/fulls/img10.jpg"><img src="images/thumbs/img10.jpg" alt="" /></a>
 							<h2>23-10-23</h2>
-							<p>Caught in the act. A couple zoo animals escaped from the enclosure</p>
+							<p>Caught in the act. A couple of zoo animals escaped from the enclosure</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/img11.jpg"><img src="images/thumbs/img11.jpg" alt="" /></a>
@@ -134,7 +134,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li> Just a webpage to cover the family domain.</li>
+							<li> Just a webpage to cover the family domain</li>
 						</ul>
 					</footer>
 
